--- a/bio.html
+++ b/bio.html
@@ -505,7 +505,7 @@ I first installed steam on a laptop, in March 2015. Dota 2 was the first game I 
         <h3>
           Warhammer Vermintide 2
         </h3>
-        <img src="images/vermin2.jpg" alt="Vermintide 2" style="width:100px;height:100px;" >
+        <img src="images/vermin2.jpeg" alt="Vermintide 2" style="width:100px;height:100px;" >
         <p>
           33 Hours</p>
           <p>
